# gpu-cuda-bouchet_westphal_marti

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
GPU/src/: Mainwindow.h
Projet_Westphal_Bouchet_Marti/: CMakeLists.txt  mainwindow.ui
src/: Main.cpp  MainWindow.cpp  Mainwindow.h  Particle.h  ParticleKernel.cu  ParticleKernel.h  RaylibWidget.cpp  RaylibWidget.h
